Site - Correction Fautes

--- a/Client Web/acceuil.html
+++ b/Client Web/acceuil.html
@@ -7,11 +7,11 @@
 	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; background-color: #ffc107;">Vie du Club :</h3>
 	<p class="center font-weight-bold" style="font-size: 14pt;">Post Assembl&eacute;e G&eacute;n&eacute;rale :</p>
 	<p class="center" style="font-size: 13pt; line-height: 20px;">Vous trouverez les nouveaux tarif dans l'onglet <a href="index.php/tarifs" target="_blank" class="text-warning">TARIFS</a></p>
-	<p class="center" style="font-size: 13pt; line-height: 20px;">Vous trouverez les nouveaux horraires pour le BNSSA dans l'onglet <a href="index.php/formation-aquatique/bnssa#Horraires" target="_blank" class="text-warning">Formation Aquatique - BNSSA</a></p>
-	<p class="center" style="font-size: 13pt; line-height: 20px;">Vous trouverez les nouveaux horraires pour le Sauvetage Sportif dans l'onglet <a href="index.php/sauvetage-sportif/les-groupes-d-entrainements#Horraires" target="_blank" class="text-warning">Sauvetage Sportif - Les groupes d'entrainements</a></p>
+	<p class="center" style="font-size: 13pt; line-height: 20px;">Vous trouverez les nouveaux horaires pour le BNSSA dans l'onglet <a href="index.php/formation-aquatique/bnssa#Horraires" target="_blank" class="text-warning">Formation Aquatique - BNSSA</a></p>
+	<p class="center" style="font-size: 13pt; line-height: 20px;">Vous trouverez les nouveaux horaires pour le Sauvetage Sportif dans l'onglet <a href="index.php/sauvetage-sportif/les-groupes-d-entrainements#Horraires" target="_blank" class="text-warning">Sauvetage Sportif - Les groupes d'entrainements</a></p>
 	<hr />
 	<p class="center font-weight-bold" style="font-size: 14pt;">Devenir Juges et Arbitre :</p>
-	<p class="center" style="font-size: 13pt; line-height: 20px;">Notre club recherche tout au long de l'ann&eacute;e des juges et arbitres afin d'encadrer les comp&eacute;titions de nos nageurs.</p>
+	<p class="center" style="font-size: 13pt; line-height: 20px;">Notre club recherche tout au long de l'ann&eacute;e des juge et arbitres afin d'encadrer les comp&eacute;titions de nos nageurs.</p>
 	<p class="center" style="font-size: 13pt;">En effet si le club ne fournit pas de juges il sera alors penalis&eacute; d'une amande</p>
 	<p class="center" style="font-size: 13pt; font-weight: bold; line-height: 20px;">Aider votre club en devenant arbitres !<br /><a href="mailto:cstsecretariat@live.fr" class="center text-warning" style="font-size: 12pt;">Pour plus d'information contactez nous</a></p>
 </div>
