--- a/Client Web/acceuil.html
+++ b/Client Web/acceuil.html
@@ -33,24 +33,9 @@
 				<td colspan="4" style="margin: auto; text-align: center; font-size: 12pt; font-weight: bold; text-decoration: underline;">Saison 2018 - 2019</td>
 			</tr>
 			<tr>
-				<th scope="row">Sports au f&eacute;minin</th>
-				<td>La Ram&eacute;e</td>
-				<td>22-09-2018</td>
-			</tr>
-			<tr>
-				<th scope="row">LIDL Star Ligue - F&eacute;nix vs Tremblay</th>
+				<th scope="row">LIDL Star Ligue - F&eacute;nix vs St Raphaël</th>
 				<td>Palais des sports</td>
-				<td>26-09-2018</td>
-			</tr>
-			<tr>
-				<th scope="row">Bouge ton Campus</th>
-				<td>Toulouse - INSA</td>
-				<td>30-09-2018</td>
-			</tr>
-			<tr>
-				<th scope="row">Les Courbes du 31</th>
-				<td>Auzielle</td>
-				<td>07-10-2018</td>
+				<td>14-11-2018</td>
 			</tr>
 			<tr>
 				<th scope="row">Bourse aux jouets et aux livres</th>
