Maj Site + Correction Mail Auto

--- a/Client Web/acceuil.html
+++ b/Client Web/acceuil.html
@@ -76,18 +76,6 @@
 				<td colspan="4" style="margin: auto; text-align: center; font-size: 12pt; font-weight: bold; text-decoration: underline;">Saison 2018 - 2019</td>
 			</tr>
 			<tr>
-				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSC1</span></th>
-				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
-				<td>Ramonville</td>
-				<td>20-10-2018</td>
-			</tr>
-			<tr>
-				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSE1</span></th>
-				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
-				<td>Ramonville</td>
-				<td>22-10-2018</td>
-			</tr>
-			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE1</span></th>
 				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
 				<td>Ramonville</td>
@@ -204,7 +192,7 @@
 	</div>
 </div>
 <hr />
-<h3>Notre FACEBOOK</h3>
+<h3 style="text-align:center;color:#3b5998;">Notre FACEBOOK</h3>
 <p>
 	<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fclubdesauvetagetoulousain%2F&amp;tabs=timeline&amp;width=500&amp;height=800&amp;small_header=false&amp;adapt_container_width=true&amp;hide_cover=false&amp;show_facepile=true&amp;appId" width="500" height="500" class="rounded" style="border: none; overflow: hidden; display: block; margin-left: auto; margin-right: auto; margin-bottom: 12px;" frameborder="0" scrolling="no"></iframe>
 </p>
