SIte - Maj Acceuil

--- a/Client Web/Autres/organigramme.html
+++ b/Client Web/Autres/organigramme.html
@@ -50,10 +50,10 @@
             <h5 class="mt-0 text-warning">R&eacute;f&eacute;rent Sauvetage Utilitaire SB-BNSSA</h5>
             Fran&ccedil;ois RODRIGUEZ</div>
     </div>
-    <div class="media mb-4"><img src="images/Images_Articles/Photo_Organigramme/Andre.png" alt="Generic placeholder image" class="mr-3 img-thumbnail rounded" style="max-width: 50%;" />
+    <div class="media mb-4"><img src="images/Images_Articles/Photo_Organigramme/Man_Silhouette_clip_art_small.png" alt="Generic placeholder image" class="mr-3 img-thumbnail rounded" style="max-width: 50%;" />
         <div class="media-body">
             <h5 class="mt-0 text-warning">R&eacute;f&eacute;rent Sauvetage Sportif</h5>
-            Andr&eacute; MERIC</div>
+            Marco LORENZELLI</div>
     </div>
     <div class="media mb-4"><img src="images/Images_Articles/Photo_Organigramme/Cyril.png" alt="Generic placeholder image" class="mr-3 img-thumbnail rounded" style="max-width: 50%;" />
         <div class="media-body">
