--- a/Client Web/acceuil.html
+++ b/Client Web/acceuil.html
@@ -38,9 +38,34 @@
 				<td>14-11-2018</td>
 			</tr>
 			<tr>
+				<th scope="row">Rencontre inter-clubs judo</th>
+				<td>Domaine d'Ariane</td>
+				<td>21-11-2018</td>
+			</tr>
+			<tr>
+				<th scope="row"><span style="color : rgb(0, 128, 0);">Renfort</span> CROSS Départemental UNSS</th>
+				<td>Labège</td>
+				<td>25-11-2018</td>
+			</tr>
+			<tr>
+				<th scope="row">Repas dansant des séniors</th>
+				<td>Colomiers</td>
+				<td>30-11-2018</td>
+			</tr>
+			<tr>
 				<th scope="row">Bourse aux jouets et aux livres</th>
 				<td>Labege</td>
 				<td>02-12-2018</td>
+			</tr>
+			<tr>
+				<th scope="row">Ronde de Ramonville</th>
+				<td>Ramonville</td>
+				<td>09-12-2018</td>
+			</tr>
+			<tr>
+				<th scope="row">Arbre de Noël de la Police</th>
+				<td>Tournefeuille</td>
+				<td>12-12-2018</td>
 			</tr>
 			<tr>
 				<th scope="row">LIDL Star Ligue - F&eacute;nix vs Pontault</th>
@@ -48,9 +73,14 @@
 				<td>19-12-2018</td>
 			</tr>
 			<tr>
+				<th scope="row"><span style="color:rgb(0,128,0);">Renfort</span> Trail (Trail nocturne)</th>
+				<td>Lévignac</td>
+				<td>02-02-2019</td>
+			</tr>
+			<tr>
 				<th scope="row">LIDL Star Ligue - F&eacute;nix vs Cesson</th>
 				<td>Palais des sports</td>
-				<td>27-02-2018</td>
+				<td>27-02-2019</td>
 			</tr>
 		</tbody>
 	</table>
@@ -74,12 +104,6 @@
 		<tbody>
 			<tr>
 				<td colspan="4" style="margin: auto; text-align: center; font-size: 12pt; font-weight: bold; text-decoration: underline;">Saison 2018 - 2019</td>
-			</tr>
-			<tr>
-				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE1</span></th>
-				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
-				<td>Ramonville</td>
-				<td>27-10-2018</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue Formateurs Premiers Secours</span></th>
