--- a/Client Web/acceuil.html
+++ b/Client Web/acceuil.html
@@ -18,7 +18,7 @@
 <hr />
 <div id="Dps_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px;">
 	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; color: white; background-color: #337ab7;">DPS &agrave; venir :</h3>
-	<p class="center" style="font-size: 12pt; color: #337ab7;">Pour les inscriptions (Licenci&eacute;s uniquement - Compte EOS obligatoire) : <a href="https://eos.ffss.fr" style="decoration-text: none; color: #333399; font-weight: bold;">Cliquez-ici</a></p>
+	<p class="center" style="font-size: 12pt; color: #337ab7;">Pour les inscriptions (Licenci&eacute;s uniquement - Compte EOS obligatoire) : <a href="https://eos.ffss.fr" style="text-decoration: none; color: #333399; font-weight: bold;">Cliquez-ici</a></p>
 	<hr />
 	<table class="table table-striped">
 		<thead>
