--- a/Client Web/Information_calendrier.html
+++ b/Client Web/Information_calendrier.html
@@ -11,3 +11,30 @@ Pour vous inscrire cliquez ICI
     <a class="btn btn-light btn-lg text-danger mt-4" href="/!\copiercollerici/!\" target="_blank" role="button">Je m'inscris</a>
 </div>
 
+<!----------------------------------------------------------------------------------------------------------------------------------------->
+
+<!-- Petite Description -->
+Formation
+
+<!-- Cloturation de formation -->
+<div class="jumbotron bg-danger text-white mx-1" style="line-height: 1em; padding: 2rem 2rem; margin-bottom: 0;">
+	<h4 class="display-4" style="font-size: 2.5rem;">Formation Formateur</h4>
+	<hr class="my-4" />
+    <p>L'inscription de cette formation se passe sur le site du Comité Départemental 31 de Sauvetage et de Secourisme à l'adresse suivante :</p>
+    <a href="http://www.ffss31.fr" target="_blank" style="text-decoration: none; color: white;">http://www.ffss31.fr</a>
+    <a class="btn btn-light btn-lg text-danger mt-4" href="http://www.ffss31.fr" target="_blank" role="button">Je m'inscris</a>
+</div>
+
+<!----------------------------------------------------------------------------------------------------------------------------------------->
+
+<!-- Petite Description -->
+Formation COMPLETE
+
+<!-- Cloturation de formation -->
+<div class="jumbotron bg-danger text-white mx-1" style="line-height: 1em; padding: 2rem 2rem; margin-bottom: 0;">
+	<h4 class="display-4" style="font-size: 2.5rem;">Formation COMPLETE</h4>
+	<hr class="my-4" />
+	<p>Cette formation est victime de sont succ&egrave;s, cepandant d'autres dates sont/seront disponnibles dans le calendrier ci-contre</p>
+	<p>Merci de votre compr&eacute;hension</p>
+	<p><small>Le Club de Sauvetage Toulousain</small></p>
+</div>
