--- a/Client Web/Formation Aquatiques/BNSSA.html
+++ b/Client Web/Formation Aquatiques/BNSSA.html
@@ -80,7 +80,7 @@
 	<div class="col-sm-12 col-md-12">
 		<div class="card">
 			<div class="card-body"><em class="fas fa-file text-info" style="font-size: 45px;"></em>
-				<p>Dossier d'inscription BNSSA</p>
+				<p><a href="images/Doc/Dossier_inscription_BNSSA.pdf" target="_blank" alt="Dossier d'inscription BNSSA" style="text-decoration: none; color:#17a2b8;">Dossier d'inscription BNSSA</a></p>
 			</div>
 		</div>
 	</div>
@@ -91,14 +91,14 @@
 	<div class="col-sm-6 col-md-6">
 		<div class="card">
 			<div class="card-body"><em class="fas fa-file text-info" style="font-size: 45px;"></em>
-				<p>QCM de l'examen</p>
+				<p><a href="images/Doc/QCM_BNSSA_Q.pdf" target="_blank" alt="Dossier d'inscription BNSSA" style="text-decoration: none; color:#17a2b8;">QCM de l'examen</a></p>
 			</div>
 		</div>
 	</div>
 	<div class="col-sm-6 col-md-6">
 		<div class="card">
 			<div class="card-body"><em class="fas fa-file text-info" style="font-size: 45px;"></em>
-				<p>Corrig&eacute; de l'examns</p>
+				<p><a href="images/Doc/QCM_BNSSA_corrigé.pdf" target="_blank" alt="Dossier d'inscription BNSSA" style="text-decoration: none; color:#17a2b8;">Corrig&eacute; de l'examns</a></p>
 			</div>
 		</div>
 	</div>
