--- a/Client Web/Information_calendrier.html
+++ b/Client Web/Information_calendrier.html
@@ -31,9 +31,9 @@ Formation COMPLETE
 <!----------------------------------------------------------------------------------------------------------------------------------------->
 
 <!-- Petite Description -->
-Formation
+Formation CD
 
-<!-- Cloturation de formation -->
+<!-- Formation CD -->
 <div class="jumbotron bg-danger text-white mx-1" style="line-height: 1em; padding: 2rem 2rem; margin-bottom: 0;">
 	<h4 class="display-4" style="font-size: 2.5rem;">Formation Formateur</h4>
 	<hr class="my-4" />
