--- a/Client Web/acceuil.html
+++ b/Client Web/acceuil.html
@@ -19,6 +19,7 @@
 <div id="Dps_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px;">
 	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; color: white; background-color: #337ab7;">DPS &agrave; venir :</h3>
 	<p class="center" style="font-size: 12pt; color: #337ab7;">Pour les inscriptions (Licenci&eacute;s uniquement - Compte EOS obligatoire) : <a href="https://eos.ffss.fr" style="text-decoration: none; color: #333399; font-weight: bold;">Cliquez-ici</a></p>
+	<p class="center" style="font-size: 12pt; color: #337ab7;">Si vous ne disposez pas de compte, faite une demande par mail : <a href="mailto:cstdps.toulouse@gmail.com" target="_blank" style="text-decoration: none;">cstdps.toulouse@gmail.com</a></p>
 	<hr />
 	<table class="table table-striped">
 		<thead>
@@ -28,49 +29,15 @@
 				<th scope="col">Date</th>
 			</tr>
 		</thead>
+		<!-- <span style="color:rgb(0,128,0);">Renfort</span>  -->
 		<tbody>
 			<tr>
 				<td colspan="4" style="margin: auto; text-align: center; font-size: 12pt; font-weight: bold; text-decoration: underline;">Saison 2018 - 2019</td>
 			</tr>
 			<tr>
-				<th scope="row">LIDL Star Ligue - F&eacute;nix vs St Raphaël</th>
-				<td>Palais des sports</td>
-				<td>14-11-2018</td>
-			</tr>
-			<tr>
-				<th scope="row">Rencontre inter-clubs judo</th>
-				<td>Domaine d'Ariane</td>
-				<td>21-11-2018</td>
-			</tr>
-			<tr>
-				<th scope="row"><span style="color : rgb(0, 128, 0);">Renfort</span> CROSS Départemental UNSS</th>
-				<td>Labège</td>
-				<td>25-11-2018</td>
-			</tr>
-			<tr>
-				<th scope="row">Repas dansant des séniors</th>
-				<td>Colomiers</td>
-				<td>30-11-2018</td>
-			</tr>
-			<tr>
-				<th scope="row">Bourse aux jouets et aux livres</th>
-				<td>Labege</td>
-				<td>02-12-2018</td>
-			</tr>
-			<tr>
-				<th scope="row">Ronde de Ramonville</th>
-				<td>Ramonville</td>
-				<td>09-12-2018</td>
-			</tr>
-			<tr>
-				<th scope="row">Arbre de Noël de la Police</th>
-				<td>Tournefeuille</td>
-				<td>12-12-2018</td>
-			</tr>
-			<tr>
-				<th scope="row">LIDL Star Ligue - F&eacute;nix vs Pontault</th>
-				<td>Palais des sports</td>
-				<td>19-12-2018</td>
+				<th scope="row">Judo - Coupe de Balma 2019</th>
+				<td>Collège Jean Rostant</td>
+				<td>27-01-2019</td>
 			</tr>
 			<tr>
 				<th scope="row"><span style="color:rgb(0,128,0);">Renfort</span> Trail (Trail nocturne)</th>
@@ -78,9 +45,39 @@
 				<td>02-02-2019</td>
 			</tr>
 			<tr>
+				<th scope="row">Compétion la Toulousaine Tour</th>
+				<td>Piscine Alex Jany</td>
+				<td>16-02-2019</td>
+			</tr>
+			<tr>
 				<th scope="row">LIDL Star Ligue - F&eacute;nix vs Cesson</th>
 				<td>Palais des sports</td>
 				<td>27-02-2019</td>
+			</tr>
+			<tr>
+				<th scope="row">Compétition de judo</th>
+				<td>Pins- Justaret</td>
+				<td>07-04-2019</td>
+			</tr>
+			<tr>
+				<th scope="row">Carnaval de Labège</th>
+				<td>Labège</td>
+				<td>14-04-2019</td>
+			</tr>
+			<tr>
+				<th scope="row">LIDL Star Ligue - Fénix vs Nantes</th>
+				<td>Palais des sports</td>
+				<td>20-04-2019</td>
+			</tr>
+			<tr>
+				<th scope="row">Fête Locale de Labège</th>
+				<td>Labège</td>
+				<td>18/19-05-2019</td>
+			</tr>
+			<tr>
+				<th scope="row">LIDL Star Ligue - Fénix vs Aix</th>
+				<td>Palais des sports</td>
+				<td>05-06-2019</td>
 			</tr>
 		</tbody>
 	</table>
@@ -106,42 +103,6 @@
 				<td colspan="4" style="margin: auto; text-align: center; font-size: 12pt; font-weight: bold; text-decoration: underline;">Saison 2018 - 2019</td>
 			</tr>
 			<tr>
-				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue Formateurs Premiers Secours</span></th>
-				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
-				<td>Ramonville</td>
-				<td>25-11-2018</td>
-			</tr>
-			<tr>
-				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue Formateurs Premiers Secours</span></th>
-				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
-				<td>Ramonville</td>
-				<td>01-12-2018</td>
-			</tr>
-			<tr>
-				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue Formateurs PSC1</span></th>
-				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
-				<td>Ramonville</td>
-				<td>02-12-2018</td>
-			</tr>
-			<tr>
-				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE2</span></th>
-				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
-				<td>Ramonville</td>
-				<td>02-12-2018</td>
-			</tr>
-			<tr>
-				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation Continue PSE1 / PSE2</span></th>
-				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
-				<td>Ramonville</td>
-				<td>22-12-2018</td>
-			</tr>
-			<tr>
-				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE1</span></th>
-				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
-				<td>Ramonville</td>
-				<td>23-12-2018</td>
-			</tr>
-			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSE1</span></th>
 				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
 				<td>Ramonville</td>
@@ -153,6 +114,108 @@
 				<td>Ramonville</td>
 				<td>02-01-2019</td>
 			</tr>
+			<tr>
+				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE1</span></th>
+				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td>Ramonville</td>
+				<td>26-01-2019</td>
+			</tr>
+			<tr>
+				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSC1</span></th>
+				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td>Ramonville</td>
+				<td>23-02-2019</td>
+			</tr>
+			<tr>
+				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSE1</span></th>
+				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td>Ramonville</td>
+				<td>25-02-2019</td>
+			</tr>
+			<tr>
+				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSE2</span></th>
+				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td>Ramonville</td>
+				<td>04-03-2019</td>
+			</tr>
+			<tr>
+				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE1</span></th>
+				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td>Ramonville</td>
+				<td>16-03-2019</td>
+			</tr>
+			<tr>
+				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE2</span></th>
+				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td>Ramonville</td>
+				<td>17-03-2019</td>
+			</tr>
+			<tr>
+				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE1</span></th>
+				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td>Ramonville</td>
+				<td>13-04-2019</td>
+			</tr>
+			<tr>
+				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE2</span></th>
+				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td>Ramonville</td>
+				<td>14-04-2019</td>
+			</tr>
+			<tr>
+				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSC1</span></th>
+				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td>Ramonville</td>
+				<td>20-04-2019</td>
+			</tr>
+			<tr>
+				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSE1</span></th>
+				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td>Ramonville</td>
+				<td>22-04-2019</td>
+			</tr>
+			<tr>
+				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSE2</span></th>
+				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td>Ramonville</td>
+				<td>29-04-2019</td>
+			</tr>
+			<tr>
+				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE1</span></th>
+				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td>Ramonville</td>
+				<td>18-05-2019</td>
+			</tr>
+			<tr>
+				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE2</span></th>
+				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td>Ramonville</td>
+				<td>19-05-2019</td>
+			</tr>
+			<tr>
+				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSC1</span></th>
+				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td>Ramonville</td>
+				<td>25-05-2019</td>
+			</tr>
+			<tr>
+				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSC1</span></th>
+				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td>Ramonville</td>
+				<td>15-06-2019</td>
+			</tr>
+			<tr>
+				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE1</span></th>
+				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td>Ramonville</td>
+				<td>22-06-2019</td>
+			</tr>
+			<tr>
+				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE2</span></th>
+				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td>Ramonville</td>
+				<td>23-06-2019</td>
+			</tr>
 		</tbody>
 	</table>
 </div>
@@ -160,8 +223,6 @@
 <div id="Sauvetage_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px;">
 	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; color: white; background-color: #449d44;">Sauvetage Sportif :</h3>
 	<p class="center" style="color: #449d44; font-size: 12pt;">Les r&eacute;sultats des comp&eacute;titions de la saison 2017 - 2018 disponnibles <a href="index.php?option=com_content&amp;view=article&amp;id=27:actualites&amp;catid=2:non-categorise" style="text-decoration: none; font-weight: bold; color: #339966;">ICI</a></p>
-	<p class="center" style="color: #343a40; font-size: 12pt;">Reprise des entrainements le :</p>
-	<p class="center" style="color: #343a40; ; font-size: 13pt; font-weight: bold;">Lundi 1 Octobre 2018</p>
 </div>
 <hr />
 <div class="row mb-3">
