--- a/Client Web/acceuil.html
+++ b/Client Web/acceuil.html
@@ -1,5 +1,6 @@
-<p><img src="images/Images_Articles/IMG_3085.JPG" alt="IMG 3085" class="img-fluid" style="display: block; margin-left: auto; margin-right: auto; border-radius: 5px;" /></p>
-<p style="font-size: 11px; text-align: center; color: #3ba4d8;"><a href="https://www.facebook.com/Gbielliphotographie/" style="text-decoration: none; font-size: 10px;">&copy;GuillaumeBielli</a></p>
+<p><img src="images/Images_Articles/Competition/LaToulousaineTour_ToulousaineTourLow.jpg" alt="ToulousaineTour" class="img-fluid" style="display: block; margin-left: auto; margin-right: auto; border-radius: 5px;" /></p>
+<!--<p><img src="images/Images_Articles/IMG_3085.JPG" alt="IMG 3085" class="img-fluid" style="display: block; margin-left: auto; margin-right: auto; border-radius: 5px;" /></p>
+<p style="font-size: 11px; text-align: center; color: #3ba4d8;"><a href="https://www.facebook.com/Gbielliphotographie/" style="text-decoration: none; font-size: 10px;">&copy;GuillaumeBielli</a></p>-->
 <hr />
 <div class="btn-group d-flex justify-content-center"><a href="#Autre_section" class="btn btn-warning w-100">Vie du Club</a><a href="#Dps_section" class="btn btn-primary w-100">Dispositif Premier Secours</a> <a href="#Formation_section" class="btn btn-danger w-100">Formations Secourisme</a> <a href="#Sauvetage_section" class="btn btn-success w-100">Sauvetage Sportif</a></div>
 <hr />
@@ -223,6 +224,8 @@
 <div id="Sauvetage_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px;">
 	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; color: white; background-color: #449d44;">Sauvetage Sportif :</h3>
 	<p class="center" style="color: #449d44; font-size: 12pt;">Les r&eacute;sultats des comp&eacute;titions de la saison 2017 - 2018 disponnibles <a href="index.php?option=com_content&amp;view=article&amp;id=27:actualites&amp;catid=2:non-categorise" style="text-decoration: none; font-weight: bold; color: #339966;">ICI</a></p>
+	<hr/>
+	<p class="center" style="color: #449d44; font-size: 12pt;">La Toulousaine Tour aura lieux le Samedi 16 Février 2019 à la Piscine Alex Jany (Argoulet), suivez l'evenement <a href="https://www.facebook.com/events/587317188349022/" target="_blank" style="decoration : none;">ICI</a></p>
 </div>
 <hr />
 <div class="row mb-3">
@@ -269,7 +272,7 @@
 	<div class="col-md-12">
 		<div class="row">
 			<div class="col-md-5"><img src="images/Images_Articles/LP9A1629_DxO.jpg" alt="" class="img-fluid" style="border-radius: 5px; margin: auto;" /></div>
-			<div class="col-md-7 align-self-center">
+			<div class="col-md-7 align-self-center text-right">
 				<h3>Nous avons besoin de vous !</h3>
 				<h4 class="text-secondary">Vous deviendrez un nouvel hero !</h4>
 			</div>
