--- a/Client Web/Partenariat/Partenariat.html
+++ b/Client Web/Partenariat/Partenariat.html
@@ -10,31 +10,37 @@
 <!-- Taille Image : Largeur : 1401 Hauteur : 1100 Resolution : 72-->
 <div class="row">
 	<div class="col-sm-6 col-md-4">
-		<div class="card" style="height: 25rem;"><img src="images/Images_Articles/Partenaires/credit-mutuel-saint-egreve.jpg" alt="credit mutuel saint egreve" class="card-img-top" />
+		<div class="card"><img src="images/Images_Articles/Partenaires/credit-mutuel-saint-egreve.jpg" alt="credit mutuel saint egreve" class="card-img-top" />
 			<div class="card-body">
 				<hr />
 				<h4 class="center">Caisse de Cr&eacute;dit Mutuel</h4>
 				<h6 class="center" style="text-transform: uppercase;">RAMONVILLE SAINT AGNE</h6>
+			</div>
+			<div class="card-footer">
 				<div style="text-align: center;"><a href="https://www.creditmutuel.fr/fr/banques/contact/trouver-une-agence/Details.aspx?banque=10278&amp;guichet=02225&amp;bureau=00&amp;pva=000&amp;type=atm&amp;loca=LABEGE" class="btn btn-warning text-center">Visiter</a></div>
 			</div>
 		</div>
 	</div>
 	<div class="col-sm-6 col-md-4">
-		<div class="card" style="height: 25rem;"><img src="images/Images_Articles/Partenaires/CD31.png" alt="CD31" class="card-img-top" />
+		<div class="card"><img src="images/Images_Articles/Partenaires/CD31.png" alt="CD31" class="card-img-top" />
 			<div class="card-body">
 				<hr />
 				<h4 class="center">Conseil D&eacute;partemental</h4>
 				<h6 class="center" style="text-transform: uppercase;">Haute-Garonne</h6>
+			</div>
+			<div class="card-footer">
 				<div style="text-align: center;"><a href="https://www.haute-garonne.fr" class="btn btn-warning text-center">Visiter</a></div>
 			</div>
 		</div>
 	</div>
 	<div class="col-sm-6 col-md-4">
-		<div class="card" style="height: 25rem;"><img src="images/Images_Articles/Partenaires/mairedetoulouse.png" alt="credit mutuel saint egreve" class="card-img-top" />
+		<div class="card"><img src="images/Images_Articles/Partenaires/mairedetoulouse.png" alt="credit mutuel saint egreve" class="card-img-top" />
 			<div class="card-body">
 				<hr />
-				<h4 class="center" style="padding-bottom: 28px;">Mairie de Toulouse</h4>
+				<h4 class="center">Mairie de Toulouse</h4>
 				<h6 class="center" style="text-transform: uppercase;">Toulouse</h6>
+			</div>
+			<div class="card-footer">
 				<div style="text-align: center;"><a href="http://www.toulouse.fr" class="btn btn-warning text-center">Visiter</a></div>
 			</div>
 		</div>
