--- a/Client Web/Poste de Secours/CommanderPosteSecours.html
+++ b/Client Web/Poste de Secours/CommanderPosteSecours.html
@@ -57,14 +57,14 @@
 <p>Nos &eacute;quipes se tiennent &agrave; votre disposition pour assurer les dispositifs sur vos manifestations.</p>
 <p>Demander votre devis</p>
 <div class="row text-center mb-4">
-	<div class="col-sm-6 col-md-6">
+	<div class="col-sm-12 col-md-12">
 		<div class="card">
 			<div class="card-body"><em class="fas fa-at text-primary" style="font-size: 45px;"></em>
 				<p class="text-primary">cstdps.toulouse@gmail.com</p>
 			</div>
 		</div>
 	</div>
-	<div class="col-sm-6 col-md-6">
+	<!--<div class="col-sm-6 col-md-6">
 		<div class="card">
 			<a href="https://drive.google.com/open?id=1AaMEMHzHiHFy-xaW2RU20jM5L0qIrM899imCuwR95Cg" target="_blank">
 				<div class="card-body"><em class="fas fa-file text-primary" style="font-size: 45px;"></em>
@@ -72,7 +72,7 @@
 			</div>
 			</a>
 		</div>
-	</div>
+	</div>-->
 </div>
 <h4 class="text-primary">Nos présences sur les évènements :</h4>
 <div class="row mb-4">
