--- a/Client Web/acceuil.html
+++ b/Client Web/acceuil.html
@@ -1,10 +1,10 @@
-<p><img src="images/Images_Articles/Competition/LaToulousaineTour_ToulousaineTourLow.jpg" alt="ToulousaineTour" class="img-fluid" style="display: block; margin-left: auto; margin-right: auto; border-radius: 5px;" /></p>
+<p><img src="images/Images_Articles/Competition/LaToulousaineTour_ToulousaineTourLow.jpg" alt="ToulousaineTour" class="img-fluid" style="display: block; margin-left: auto; margin-right: auto; border-radius: 5px; width: 60%;" /></p>
 <!--<p><img src="images/Images_Articles/IMG_3085.JPG" alt="IMG 3085" class="img-fluid" style="display: block; margin-left: auto; margin-right: auto; border-radius: 5px;" /></p>
 <p style="font-size: 11px; text-align: center; color: #3ba4d8;"><a href="https://www.facebook.com/Gbielliphotographie/" style="text-decoration: none; font-size: 10px;">&copy;GuillaumeBielli</a></p>-->
 <hr />
 <div class="btn-group d-flex justify-content-center"><a href="#Autre_section" class="btn btn-warning w-100">Vie du Club</a><a href="#Dps_section" class="btn btn-primary w-100">Dispositif Premier Secours</a> <a href="#Formation_section" class="btn btn-danger w-100">Formations Secourisme</a> <a href="#Sauvetage_section" class="btn btn-success w-100">Sauvetage Sportif</a></div>
 <hr />
-<div id="Autre_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px; line-height: 80%; color: #343a40;">
+<div id="Autre_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px; line-height: 80%; color: #343a40; background-color: white;">
 	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; background-color: #ffc107;">Vie du Club :</h3>
 	<p class="center font-weight-bold" style="font-size: 14pt;">Post Assembl&eacute;e G&eacute;n&eacute;rale :</p>
 	<p class="center" style="font-size: 13pt; line-height: 20px;">Vous trouverez les nouveaux tarifs dans l'onglet <a href="index.php/tarifs" target="_blank" class="text-warning">TARIFS</a></p>
@@ -17,7 +17,7 @@
 	<p class="center" style="font-size: 13pt; font-weight: bold; line-height: 20px;">Aider votre club en devenant arbitre !<br /><a href="mailto:cstsecretariat@live.fr" class="center text-warning" style="font-size: 12pt;">Pour plus d'information contactez nous</a></p>
 </div>
 <hr />
-<div id="Dps_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px;">
+<div id="Dps_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px; background-color: white;">
 	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; color: white; background-color: #337ab7;">DPS &agrave; venir :</h3>
 	<p class="center" style="font-size: 12pt; color: #337ab7;">Pour les inscriptions (Licenci&eacute;s uniquement - Compte EOS obligatoire) : <a href="https://eos.ffss.fr" style="text-decoration: none; color: #333399; font-weight: bold;">Cliquez-ici</a></p>
 	<p class="center" style="font-size: 12pt; color: #337ab7;">Si vous ne disposez pas de compte, faite une demande par mail : <a href="mailto:cstdps.toulouse@gmail.com" target="_blank" style="text-decoration: none;">cstdps.toulouse@gmail.com</a></p>
@@ -84,7 +84,7 @@
 	</table>
 </div>
 <hr />
-<div id="Formation_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px;">
+<div id="Formation_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px; background-color: white;">
 	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; color: white; background-color: #d9534f;">Formations Secourisme des prochains mois :</h3>
 	<p style="font-size: 12pt; text-align: center; margin-bottom: 10px; color: #d9534f;">Les inscritions se font en cliquant sur le calendrier ci-contre &agrave; la date et l'&eacute;v&egrave;nement voulu.</p>
 	<p style="font-size: 10pt; text-align: center; margin-bottom: 10px; color: #d9534f;">Toutes nos dates ne sont pas reprises ci-dessous nous vous invitons &agrave; consulter le calendrier ci-contre.</p>
@@ -221,11 +221,11 @@
 	</table>
 </div>
 <hr />
-<div id="Sauvetage_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px;">
+<div id="Sauvetage_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px; background-color: white;">
 	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; color: white; background-color: #449d44;">Sauvetage Sportif :</h3>
 	<p class="center" style="color: #449d44; font-size: 12pt;">Les r&eacute;sultats des comp&eacute;titions de la saison 2017 - 2018 disponnibles <a href="index.php?option=com_content&amp;view=article&amp;id=27:actualites&amp;catid=2:non-categorise" style="text-decoration: none; font-weight: bold; color: #339966;">ICI</a></p>
 	<hr/>
-	<p class="center" style="color: #449d44; font-size: 12pt;">La Toulousaine Tour aura lieux le Samedi 16 Février 2019 à la Piscine Alex Jany (Argoulet), suivez l'evenement <a href="https://www.facebook.com/events/587317188349022/" target="_blank" style="decoration : none;">ICI</a></p>
+	<p class="center" style="font-size: 12pt; line-height: 20px;">La Toulousaine Tour aura lieux le Samedi 16 Février 2019 à la Piscine Alex Jany (Argoulet), suivez l'evenement <a href="https://www.facebook.com/events/587317188349022/" target="_blank" style="decoration : none;">ICI</a></p>
 </div>
 <hr />
 <div class="row mb-3">
